--- a/app/src/main/res/layout/activity_listado_ligas.xml
+++ b/app/src/main/res/layout/activity_listado_ligas.xml
@@ -17,4 +17,15 @@
 
     <include layout="@layout/content_main_ligas" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnNuevo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:src="@drawable/ic_add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
